# OnDevice_RAG_Android

./: .gitignore  README.md  project.toml  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/ondevice_rag/: MainActivity.kt
app/src/main/java/com/example/ondevice_rag/data/: AuthRepository.kt  KbDownloadRequest.kt  Models.kt
app/src/main/java/com/example/ondevice_rag/kb/: ChunkEntry.kt  ChunkStore.kt  EmbeddingIndex.kt  KbDownloadManager.kt  KbManifest.kt  KbMetadataStore.kt  KbPackageManager.kt  RetrievalEngine.kt
app/src/main/java/com/example/ondevice_rag/llama/: LlamaBridge.kt  LlamaManager.kt
app/src/main/java/com/example/ondevice_rag/ui/: MainViewModel.kt  MainViewModelFactory.kt
app/src/main/java/com/example/ondevice_rag/ui/screens/: ChatScreen.kt  LoginScreen.kt  ScopeSelectionScreen.kt
app/src/main/java/com/example/ondevice_rag/ui/theme/: Color.kt  Theme.kt
app/src/main/java/com/example/ondevice_rag/util/: Files.kt
app/src/main/java/com/example/ondevice_rag/worker/: KbDownloadWorker.kt
cloud-server-side/: README.md  main.py  pyproject.toml
cloud-server-side/core/: settings.py  urls.py
cloud-server-side/knowledge/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
cloud-server-side/knowledge/migrations/: 0001_initial.py
docs/: ARCHITECTURE.md  KB_PACKAGE.md  LLAMA_ANDROID.md
sql/: 001_init.sql  002_indexes.sql
src/offline_vdb/db/: connect.py  dao.py  schema.py
